# sailsim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
completions/: sailsim.bash  sailsim.zsh
configs/autopilots/: gybe.toml  heading_hold.toml  nomoto.toml  nomoto_maneuver.toml  pypilot.toml  signalk.toml  signalk_rs.toml  tack.toml
configs/benchmarks/: autopilot_catalog.toml
configs/scenarios/: calm_heading_hold.toml  compare_aggressive.toml  compare_conservative.toml  gybe_starboard_to_port.toml  moderate_beam_reach.toml  pypilot_heading_hold.toml  rough_6dof.toml  rough_seas.toml  signalk_rs_heading_hold.toml  tack_port_to_starboard.toml  waypoint_triangle.toml
configs/yachts/: default.toml  dehler34.toml  hr62.toml  imoca60.toml  j24.toml  mini650.toml  swan45.toml
docker/: docker-compose.yml
docker/pypilot/: Dockerfile  apply_patch.py  pypilot_sim.conf
docs/: stability_analysis.md  yacht_coefficient_estimation.md
scripts/: analyze_autopilot.py  estimate_yacht_coefficients.py  stability_check.py
src/sailsim/: __main__.py  cli.py
tests/benchmarks/: conftest.py  test_autopilot_benchmarks.py
tests/integration/: test_6dof_physics.py  test_current_physics.py  test_recording.py  test_simulator_physics.py
tests/scenarios/: test_gybing.py  test_heading_hold.py  test_tacking.py  test_waypoint_route.py
tests/unit/: test_aerodynamics.py  test_analysis_empirical.py  test_analysis_linear.py  test_autopilot_factory.py  test_config.py  test_current_models.py  test_desired_track.py  test_dynamics.py  test_dynamics_6dof.py  test_nomoto.py  (+17 more)
(+34 files in other folders)
